--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
   "dependencies": {
     "framer-motion": "^12.34.3",
     "react": "^19.2.0",
-    "react-dom": "^19.2.0"
+    "react-dom": "^19.2.0",
+    "react-hook-form": "^7.71.2"
   },
   "devDependencies": {
     "@chromatic-com/storybook": "^5.0.1",
